<resources>
    <string name="app_name">Mastermind</string>
    <string name="title_activity_game_board">GameBoard</string>
    <string name="title_activity_settings">Game Options</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="setup_header">Game Options</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_instructions">Instructions</string>

    <!-- How to Play -->
    <string name="objective">The goal of Mastermind is to guess the secret code, a sequence of colored pegs, in as few attempts as possible. The code is generated by one player (the codemaker), and the other player (the codebreaker) tries to decipher it.</string>
    <string name="your_turn">You make your guess by placing a row of code pegs on the board. Tap on a circle with a white outline and then on the color you want.</string>
    <string name="feedback">The computer will provide feedback on your guess. A completely filled-in circle means the color is correct and is in the correct spot. A half-filled circle means the color is correct but in the wrong spot. A circle with a thin outline means that that color is completely wrong.</string>
    <string name="feedback_note">Note: The feedback is unordered</string>
    <string name="winning">You win if you guess the code before running out of attempts. The computer wins if you fail to guess the code in time.</string>
    <string name="options_colors">You can adjust how many colors can be in the code</string>
    <string name="options_length">You can adjust how long the code will be</string>
    <string name="options_duplicates">You can adjust whether duplicate colors will be allowed in the secret code</string>
    <string name="tip_1">Use deduction and logic to make informed guesses.</string>
    <string name="tip_2">Pay attention to feedback and adjust your strategy accordingly.</string>
    <string name="tip_3">Start with a diverse initial guess to gather information about possible colors and positions.</string>
    <string name="luck">Mastermind is a game that combines strategy, deduction, and a bit of luck. Enjoy!</string>
</resources>